force-app/main/default/objects/mapping__c/mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Mapping</label>
</CustomObject>