force-app/main/default/objects/mapping__c/fields/ConvertedValue__c.field-meta.xml
<CustomField>
    <fullName>ConvertedValue__c</fullName>
    <label>ConvertedValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>