force-app/main/default/objects/mapping__c/fields/PickValue__c.field-meta.xml
<CustomField>
    <fullName>PickValue__c</fullName>
    <label>PickValue</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>