force-app/main/default/objects/mapping__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <label>Repository</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>