force-app/main/default/objects/mapping__c/listViews/Acompte.listView-meta.xml
<ListView>
    <fullName>Acompte</fullName>
    <columns>NAME</columns>
    <columns>Repository__c</columns>
    <columns>PickValue__c</columns>
    <columns>ConvertedValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Repository__c</field>
        <operation>equals</operation>
        <value>Acompte</value>
    </filters>
    <label>Acompte</label>
    <language>fr</language>
</ListView>