force-app/main/default/objects/mapping__c/listViews/Case_Type_Mapping.listView-meta.xml
<ListView>
    <fullName>Case_Type_Mapping</fullName>
    <columns>NAME</columns>
    <columns>PickValue__c</columns>
    <columns>ConvertedValue__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Repository__c</field>
        <operation>equals</operation>
        <value>case_typeMapping</value>
    </filters>
    <label>Case Type Mapping</label>
    <language>fr</language>
</ListView>