force-app/main/default/objects/mapping__c/listViews/KStore_Planning.listView-meta.xml
<ListView>
    <fullName>KStore_Planning</fullName>
    <columns>NAME</columns>
    <columns>Repository__c</columns>
    <columns>PickValue__c</columns>
    <columns>ConvertedValue__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Repository__c</field>
        <operation>contains</operation>
        <value>k-store.calendar</value>
    </filters>
    <label>KStore / Planning</label>
    <language>fr</language>
    <sharedTo>
        <role>Supportutilisateur</role>
    </sharedTo>
</ListView>