force-app/main/default/objects/mapping__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>Repository__c</columns>
    <columns>PickValue__c</columns>
    <columns>ConvertedValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>