force-app/main/default/objects/mapping__c/listViews/Zones_climatiques.listView-meta.xml
<ListView>
    <fullName>Zones_climatiques</fullName>
    <columns>NAME</columns>
    <columns>Repository__c</columns>
    <columns>PickValue__c</columns>
    <columns>ConvertedValue__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Repository__c</field>
        <operation>equals</operation>
        <value>zone_climatique</value>
    </filters>
    <label>Zones climatiques</label>
    <language>fr</language>
    <sharedTo>
        <role>Supportutilisateur</role>
    </sharedTo>
</ListView>